# type_more

./: Cargo.toml  README.md  TODOS.md
src/: email.rs  error.rs  lib.rs  password.rs  url.rs
tests/: test_email.rs  test_url.rs
